<resources>
    <string name="app_name">Check it App!</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="edit_activity_label">Edit or add a new recommendation</string>
    <string name="task_title_label">Recommendation</string>
    <string name="task_title_hint">Recommendation</string>
    <string name="task_description_label">Additional info</string>
    <string name="task_description_hint">Additional info</string>
    <string name="task_date_label">Due date?</string>
    <string name="task_date_hint">dd-mm-yyyy</string>
    <string name="task_category_label">Type of recommendation</string>
    <string name="save_note_button_text">Save</string>
    <string name="update_button_text">Update</string>
    <string name="days_left_label">Days left</string>
    <string name="tastk_title_label">Tasks</string>
    <string name="filter_adult_stuff_text">Adult stuff</string>
    <string name="filter_coding_text">Coding</string>
    <string name="filter_movies_text">Movies</string>
    <string name="filter_food">Food</string>
    <string name="filter_books">Books</string>
    <string name="filter_games">Games</string>
    <string name="fiter_gigs">Gigs</string>
    <string name="filter_music">Music</string>
    <string name="filter_fun_stuff">Fun Stuff</string>
    <string name="filter_show_all">Show all</string>
    <string name="filter_show_urgent_recommendations">Show urgent recommendations</string>
    <string name="generate_test_array">Generate Tests Recommendations</string>
    <string name="filter_recommendations">Filter recoomendations:</string>
    <string name="filter_by_category_label">Filter by category</string>
    <string name="manage_categories_text">Manage categories</string>
    <string name="add_new_category_label_text">Add a new category</string>
    <string name="delete_category_label_text">Delete a category</string>
    <string name="category_name_label">category name:</string>
    <string name="add_category_button">Create!</string>
</resources>
