<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/filter_show_all"
        android:title="@string/filter_show_all"
        android:icon="@drawable/filter_icon"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/filter_show_urgent_recommendations"
        android:title="@string/filter_show_urgent_recommendations" />
    <item
        android:id="@+id/generate_test_array"
        android:title="@string/generate_test_array" />
    <item
        android:id="@+id/filter_coding"
        android:checkable="true"
        android:title="@string/filter_coding_text" />
    <item
        android:id="@+id/filter_movies"
        android:checkable="true"
        android:title="@string/filter_movies_text" />
    <item
        android:id="@+id/filter_food"
        android:checkable="true"
        android:title="@string/filter_food" />
    <item
        android:id="@+id/filter_books"
        android:checkable="true"
        android:title="@string/filter_books" />
    <item
        android:id="@+id/filter_gigs"
        android:checkable="true"
        android:title="@string/fiter_gigs" />
    <item
        android:id="@+id/filter_music"
        android:checkable="true"
        android:title="@string/filter_music" />

</menu>