<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.user.todolist.activities.EditTaskActivity">

        <ImageButton
            android:id="@+id/calendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:onClick="onCalendarButtonPressed"
            app:layout_constraintBottom_toBottomOf="@+id/taskDateEditText"
            app:layout_constraintLeft_toRightOf="@+id/taskDateEditText"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:id="@+id/tastkTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="60dp"
            android:text="@string/task_title_label"
            android:textColorLink="@color/colorAccent"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="24dp" />

        <EditText
            android:id="@+id/taskTitleEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/task_title_hint"
            android:inputType="textPersonName"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tastkTitleLabel" />
        <TextView
            android:id="@+id/taskDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="47dp"
            android:text="@string/task_description_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskTitleEditText"
            />

        <EditText
            android:id="@+id/taskDescriptionEditText"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:hint="@string/task_description_hint"
            android:inputType="textMultiLine"
            android:textCursorDrawable="@drawable/color_cursor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionLabel" />

        <TextView
            android:id="@+id/taskDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:text="@string/task_date_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDescriptionEditText" />

        <EditText
            android:backgroundTint="@color/colorPrimaryDark"
            android:textCursorDrawable="@drawable/color_cursor"
            android:id="@+id/taskDateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="1dp"
            android:editable="true"
            android:ems="10"
            android:hint="@string/task_date_hint"
            android:inputType="date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDateLabel" />

        <TextView
            android:id="@+id/TaskCategoryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:text="@string/task_category_label"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/taskDateEditText" />

        <Spinner
            android:id="@+id/task_category_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TaskCategoryLabel" />

        <Button
            android:id="@+id/saveNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:onClick="onSaveNoteButtonPressed"
            android:text="@string/save_note_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_category_dropdown" />

        <Button
            android:id="@+id/updateNoteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:onClick="onUpdateNoteButtonPressed"
            android:text="@string/update_button_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_category_dropdown" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>